# exificient-native-image

./: .gitignore  CLAUDE.md  Dockerfile.build  README.md  conanfile.py  pom.xml  test.cpp
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
examples/entity_demo/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  entity_demo.cpp  exi_demo.cpp
examples/entity_demo/samples/: entity.xml  navigation-report.xml  position-report-detailed.xml  task-command.xml  task.xml
smoke/: conanfile.py
src/main/java/org/example/: ExiProcessor.java
src/test/java/org/example/: ExiProcessorTest.java
src/test/resources/: exi_options_byte_aligned.xml
test_package/: test_package.cpp
